backend/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-web-analyzer-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-web-analyzer-backend
  template:
    metadata:
      labels:
        app: green-web-analyzer-backend
    spec:
      containers:
      - name: green-web-analyzer-backend
        image: patr1ick/green-web-analyzer-backend:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: green-web-analyzer-backend
spec:
  selector:
    app: green-web-analyzer-backend
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: green-web-analyzer-backend
spec:
  podSelector:
    matchLabels:
      app: green-web-analyzer-backend
  ingress:
    - ports:
        - port: 5000
          protocol: TCP
